created first island

--- a/dialogic/themes/default-theme.cfg
+++ b/dialogic/themes/default-theme.cfg
@@ -74,5 +74,10 @@ animation="Pulse"
 
 [box]
 
-size=Vector2( 800, 167 )
-anchor=1
+size=Vector2( 500, 167 )
+anchor=9
+box_margin_v=40.0
+
+[text]
+
+margin=Vector2( 0, 10 )
