--- a/dialogic/themes/default-theme.cfg
+++ b/dialogic/themes/default-theme.cfg
@@ -67,6 +67,7 @@ selecting={
 use_image=false
 modulation=false
 full_width=false
+use_color=false
 
 [next_indicator]
 
@@ -74,10 +75,16 @@ animation="Pulse"
 
 [box]
 
-size=Vector2( 500, 167 )
+size=Vector2( 700, 200 )
 anchor=9
 box_margin_v=40.0
+box_margin_h=-60.0
 
 [text]
 
-margin=Vector2( 0, 10 )
+margin=Vector2( 20, 10 )
+color="#ffdbd5d5"
+
+[name]
+
+auto_color=true
