Resolvido, falta so detalhe e balancear

--- a/dialogic/themes/default-theme.cfg
+++ b/dialogic/themes/default-theme.cfg
@@ -66,25 +66,29 @@ selecting={
 
 use_image=false
 modulation=false
-full_width=false
+full_width=true
 use_color=false
 
 [next_indicator]
 
 animation="Pulse"
+offset=Vector2( 10, 10 )
 
 [box]
 
-size=Vector2( 700, 200 )
+size=Vector2( 750, 200 )
 anchor=9
-box_margin_v=40.0
+box_margin_v=30.0
 box_margin_h=-60.0
 
 [text]
 
-margin=Vector2( 20, 10 )
+margin=Vector2( 20, 20 )
 color="#ffdbd5d5"
+shadow_offset=Vector2( 3, 3 )
+alignment="Center"
 
 [name]
 
 auto_color=true
+name_padding=Vector2( 10, 0 )
